--- a/index.html
+++ b/index.html
@@ -13,9 +13,21 @@
           <img src="images/pizza2.png" width="300px" id="logo" height="200px" alt="">
           <h1>WELCOME TO PIZZA RIBA</h1>
         </div>
+        <div class="row1">
+          <div class="col-md-4">
+            <img src="images/pizzatwo.jpg" width="400px" height="300px" alt="ghj">
+          </div>
+          <div class="col-md-4">
+            <img src="images/pizzavar.jpg" width="400px" height="300px" alt="fghj">
+          </div>
+          <div class="col-md-4">
+            <img src="images/pizzahat.jpg" width="400px" height="300px" alt="xcvbn">
+          </div>
+
+        </div>
         <div class="row">
           <div class="col-xs-12 home">
-            <p>We believe in the best service delivery</p>
+            <h2>We believe in the best service delivery <br>proceed to order!!..</h2>
           </div>
           <div class="row">
             <div class="col-xs-5 moja">
