--- a/index.html
+++ b/index.html
@@ -28,34 +28,131 @@
         <div class="row">
           <div class="col-xs-12 home">
             <h2>We believe in the best service delivery <br>proceed to order!!..</h2>
-          </div>
-          <div class="row">
-            <div class="col-xs-5 moja">
-              <div class="col-xs-5 pizza1">
-                <form id="pizza1">
-                  <div class="form-group">
-                    <label for="time">Select a size</label>
-                    <select class="form-control" id="size">
-                      <option value="1">Small (Serves 2 people or 1 hungry person)</option>
-                      <option value="2">Medium (Serves 3 people or 2 hungry people or 1 quite hungry person)</option>
-                      <option value="3">Large (Serves 4 people or 3 hungry people or 1 very hungry person)</option>
-                      <option value="4">Extra-Large (Serves 5 people or 4 hungry people or 1 literally starving person)</option>
-                    </select>
-                  </div>
-                  <button class="btn-danger btn" type="submit" name="button">Add some toppings!</button>
-                </form>
+            <div class="row">
+              <div class="col-xs-5 moja">
+                <div class="col-xs-5 pizza1">
+                  <form id="order1">
+                    <div class="form-group">
+                      <label for="time">Select a size</label>
+                      <select class="form-control" id="size">
+                        <option value="1">Small</option>
+                        <option value="2">Medium</option>
+                        <option value="3">Large </option>
+                        <option value="4">Extra-Large</option>
+                      </select>
+                    </div>
+                    <button class="btn-danger btn" type="submit" name="button">Add some toppings!</button>
+                  </form>
+                </div>
               </div>
-
-
             </div>
-
-
           </div>
-
 
         </div>
 
       </div>
+      <div class="row">
+        <div class="row adds hide">
+          <div class="col-md-6">
+            <h3 class="heading">Pick your toppings:</h3>
+                <form action="form_action.asp" class="toppings">
+                <input type="checkbox" name="topping" value="1" id="cheese">Cheese<br>
+                <input type="checkbox" name="topping" value="2">Pepperoni<br>
+                <input type="checkbox" name="topping" value="3">Sausage<br>
+
+                </form>
+          </div>
+          <div class="col-md-6"><br>
+            <form action="form_action.asp" class="toppings">
+              <input type="checkbox" name="topping" value="4">Onions<br>
+              <input type="checkbox" name="topping" value="5">Green Peppers<br>
+              <input type="checkbox" name="topping" value="6">Mushrooms<br>
+
+              <br>
+              <button class="btn-danger btn" type="submit" name="button" id="topSubmit">Submit</button>
+              </form>
+
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-xs-9">
+            <h2>THAnk you for your order!!</h2><br><br>
+            <h3>MAke another order here</h3>
+            <form id="order2">
+                <div class="form-group">
+                  <label for="time">Select a size</label>
+                  <select class="form-control" id="size2">
+                    <option value="1">Small</option>
+                    <option value="2">Medium</option>
+                    <option value="3">Large</option>
+                    <option value="4">Extra-Large</option>
+                  </select>
+                </div>
+                <button class="btn-danger btn" type="submit" name="button">Add to order!</button>
+              </form><br><br>
+              <h3>Proceed to delivery</h3>
+              <button class="btn-danger btn btn-large" type="button" name="button" id="goToDelivery">I'm ready to submit this order</button>
+          </div>
+          <div class="delivery">
+            <h3>Enter address</h3>
+            <form id="new-address">
+              <div class="form-group">
+                <label for="Name">First name</label>
+                <input type="text" class="form-control" id="name">
+              </div><br>
+              <div>
+                <div class="new-address">
+                  <div class="form-group">
+                    <label for="new-street-name">Estate</label>
+                    <input type="text" class="form-control new-street" id="estate">
+                  </div><br>
+
+                  <div class="form-group">
+                    <label for="new-state"> Plot-number</label>
+                    <input type="text" class="form-control new-state" id="number">
+                  </div>
+
+
+                </div>
+              </div>
+              <button type="submit" class="btn btn-danger" id="deliverySubmit">Deliver here</button>
+            </form>
+          </div>
+        </div>
+        <div class="col-xs-3 col-xs-offset-1 stagedReveal totalBox framed">
+          <h3 class="heading">Order total</h3>
+          <ol id="output">
+          </ol>
+          <div class="row">
+            <div class="col-xs-10 col-xs-offset-1" id="totalDiv">
+              <p>$<span class="framed" id="totalHere"></span></p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-6 col-xs-offset-3 goodbye stagedReveal framed">
+            <h3>Thank you <span id="nameHere"></span>!</h3>
+            <div class="row">
+              <div class="col-xs-7 addressText">
+                <h3>Your Final order total is: $<span id="finalTotalHere"></span></h3>
+                <h3>We will deliver to this address:</h3>
+                <h4><span id="estateHere"></span></h4>
+                <h4><span id="plot-numberHere"></span></h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+          </div>
+        </div>
+
+      </div>
+
+
+
+
 
     </div>
 
