add all changes

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row hide thanks">
           <div class="col-xs-9">
-            <h2>THAnk you for your order!!</h2><br><br>
+            <h2>Thank you for your order!!</h2><br><br>
             <h3>MAke another order here</h3>
             <form id="order2">
                 <div class="form-group">
@@ -120,7 +120,7 @@
             </form>
           </div>
         </div>
-        <div class="col-xs-3 col-xs-offset-1 stagedReveal totalBox framed">
+        <div class="col-xs-3 col-xs-offset-1 hide totalBox ">
           <h3 class="heading">Order total</h3>
           <ol id="output">
           </ol>
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-6 col-xs-offset-3 goodbye stagedReveal framed">
+          <div class="col-xs-6 col-xs-offset-3 goodbye hide framed">
             <h3>Thank you <span id="nameHere"></span>!</h3>
             <div class="row">
               <div class="col-xs-7 addressText">
