--- a/index.html
+++ b/index.html
@@ -1,116 +1,117 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>Pizaa Ribaa</title>
+    <link rel="stylesheet" href="css/bootstrap.css" media="screen" title="Bootstrap">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="bootstrap.css">
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/scripts.js"></script>
+    <title>Pizza</title>
   </head>
   <body>
     <div class="container">
       <div class="jumbotron">
         <div class="header">
-          <img src="images/pizza2.png" width="300px" id="logo" height="200px" alt="">
-          <h1>WELCOME TO PIZZA RIBA</h1>
+          <img src="images/pizza2.png" width="300px" height="200px" alt="" id="logo"/>
+          <h2 class="heading">Welcome to Pizaa-Ribaa!</h2>
+        </div>
         </div>
         <div class="row1">
-          <div class="col-md-4">
-            <img src="images/pizzatwo.jpg" width="400px" height="300px" alt="ghj">
-          </div>
-          <div class="col-md-4">
-            <img src="images/pizzavar.jpg" width="400px" height="300px" alt="fghj">
-          </div>
-          <div class="col-md-4">
-            <img src="images/pizzahat.jpg" width="400px" height="300px" alt="xcvbn">
-          </div>
-
-        </div>
-        <div class="row">
-          <div class="col-xs-12 home">
-            <h2>We believe in the best service delivery <br>proceed to order!!..</h2>
+          <div class="col-xs-12 welcome">
+            <hr>
+            <p>Here at Pizza Planet we believe in maintaining Stellar quality for <span class="emphasis">every single</span> order.</p>
             <div class="row">
-              <div class="col-xs-5 moja">
-                <div class="col-xs-5 pizza1">
-                  <form id="order1">
-                    <div class="form-group">
-                      <label for="time">Select a size</label>
-                      <select class="form-control" id="size">
-                        <option value="1">Small</option>
-                        <option value="2">Medium</option>
-                        <option value="3">Large </option>
-                        <option value="4">Extra-Large</option>
-                      </select>
-                    </div>
-                    <button class="btn-danger btn" type="submit" name="button">Add some toppings!</button>
-                  </form>
-                </div>
+              <div class="col-xs-5 pizza1">
+                <form id="pizza1">
+                  <div class="form-group">
+                    <label for="time">Select a size</label>
+                    <select class="form-control" id="size">
+                      <option value="1">Small</option>
+                      <option value="2">Medium</option>
+                      <option value="3">Large</option>
+                      <option value="4">Extra-Large</option>
+                    </select>
+                  </div>
+                  <button class="btn-danger btn" type="submit" name="button">Add some toppings!</button>
+                </form>
               </div>
             </div>
           </div>
-
         </div>
 
-      </div>
-      <div class="row">
-        <div class="row adds hide">
-          <div class="col-md-6">
-            <h3 class="heading">Pick your toppings:</h3>
-                <form action="form_action.asp" class="toppings">
-                <input type="checkbox" name="topping" value="1" id="cheese">Cheese<br>
-                <input type="checkbox" name="topping" value="2">Pepperoni<br>
-                <input type="checkbox" name="topping" value="3">Sausage<br>
-
-                </form>
-          </div>
-          <div class="col-md-6"><br>
-            <form action="form_action.asp" class="toppings">
-              <input type="checkbox" name="topping" value="4">Onions<br>
-              <input type="checkbox" name="topping" value="5">Green Peppers<br>
-              <input type="checkbox" name="topping" value="6">Mushrooms<br>
-
+      <div class="row ">
+        <div class="col-xs-7 col-xs-offset-1">
+          <div class="row topsAdd stagedReveal framed">
+            <div class="col-xs-5">
+              <h3 class="heading">Pick your toppings:</h3>
+              <form action="form_action.asp" class="toppings">
+              <input type="checkbox" name="topping" value="1" id="cheese">Cheese<br>
+              <input type="checkbox" name="topping" value="2">Pepperoni<br>
+              <input type="checkbox" name="topping" value="3">Sausage<br>
+              <input type="checkbox" name="topping" value="4">Canadian Bacon<br>
+              <input type="checkbox" name="topping" value="5">Steak<br>
+              <input type="checkbox" name="topping" value="6">Tofu<br>
+              </form>
+            </div>
+            <div class="col-xs-5">
+              <br>
+              <br>
+              <br>
+              <form action="form_action.asp" class="toppings">
+              <input type="checkbox" name="topping" value="7">Onions<br>
+              <input type="checkbox" name="topping" value="8">Green Peppers<br>
+              <input type="checkbox" name="topping" value="9">Mushrooms<br>
+              <input type="checkbox" name="topping" value="10">Pineapple<br>
+              <input type="checkbox" name="topping" value="11">Olives<br>
+              <input type="checkbox" name="topping" value="12">Jalapenos<br>
               <br>
               <button class="btn-danger btn" type="submit" name="button" id="topSubmit">Submit</button>
               </form>
-
+            </div>
           </div>
-        </div>
-
-        <div class="row hide thanks">
-          <div class="col-xs-9">
-            <h2>Thank you for your order!!</h2><br><br>
-            <h3>MAke another order here</h3>
-            <form id="order2">
+          <div class="row stagedReveal thanks framed">
+            <div class="col-xs-9 ">
+              <img src="https://www.reginospizza.com/images/site/veg.png" width="400px" height="300px" alt="Confirmation Picture" class="img-responsive" />
+              <h1>Thank you for your order!</h1>
+              <p>Hang on, I need another pizza!</p>
+              <form id="pizza2">
                 <div class="form-group">
                   <label for="time">Select a size</label>
                   <select class="form-control" id="size2">
-                    <option value="1">Small</option>
-                    <option value="2">Medium</option>
-                    <option value="3">Large</option>
-                    <option value="4">Extra-Large</option>
+                    <option value="1">Small (Serves 2 people or 1 hungry person)</option>
+                    <option value="2">Medium (Serves 3 people or 2 hungry people or 1 quite hungry person)</option>
+                    <option value="3">Large (Serves 4 people or 3 hungry people or 1 very hungry person)</option>
+                    <option value="4">Extra-Large (Serves 5 people or 4 hungry people or 1 literally starving person)</option>
                   </select>
                 </div>
                 <button class="btn-danger btn" type="submit" name="button">Add to order!</button>
-              </form><br><br>
-              <h3>Proceed to delivery</h3>
+              </form>
+              <br>
+              <h4>Or, are you ready to go?</h4>
+              <br>
               <button class="btn-danger btn btn-large" type="button" name="button" id="goToDelivery">I'm ready to submit this order</button>
+            </div>
           </div>
-          <div class="delivery">
-            <h3>Enter address</h3>
+          <div class="delivery stagedReveal framed">
+            <h3>What is your delivery address?</h3>
             <form id="new-address">
               <div class="form-group">
                 <label for="Name">First name</label>
                 <input type="text" class="form-control" id="name">
-              </div><br>
+              </div>
               <div>
                 <div class="new-address">
-                  <div class="form-group">
-                    <label for="new-street-name">Estate</label>
-                    <input type="text" class="form-control new-street" id="estate">
-                  </div><br>
 
                   <div class="form-group">
-                    <label for="new-state"> Plot-number</label>
-                    <input type="text" class="form-control new-state" id="number">
+                    <label for="new-city">Estate</label>
+                    <input type="text" class="form-control new-city" id="city">
+                  </div>
+                  <div class="form-group">
+                    <label for="new-street-name">Street</label>
+                    <input type="text" class="form-control new-street" id="street">
+                  </div>
+                  <div class="form-group">
+                    <label for="new-street-name">House-Number</label>
+                    <input type="text" class="form-control new-street" id="city">
                   </div>
 
 
@@ -120,7 +121,7 @@
             </form>
           </div>
         </div>
-        <div class="col-xs-3 col-xs-offset-1 hide totalBox ">
+        <div class="col-xs-3 col-xs-offset-1 stagedReveal totalBox framed">
           <h3 class="heading">Order total</h3>
           <ol id="output">
           </ol>
@@ -131,30 +132,19 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-6 col-xs-offset-3 goodbye hide framed">
+          <div class="col-xs-6 col-xs-offset-3 goodbye stagedReveal framed">
             <h3>Thank you <span id="nameHere"></span>!</h3>
             <div class="row">
               <div class="col-xs-7 addressText">
                 <h3>Your Final order total is: $<span id="finalTotalHere"></span></h3>
                 <h3>We will deliver to this address:</h3>
-                <h4><span id="estateHere"></span></h4>
-                <h4><span id="plot-numberHere"></span></h4>
+                <h4><span id="streetHere"></span></h4>
+                <h4><span id="cityHere"></span>, <span id="stateHere"> <span id="zipHere"></span></span></h4>
               </div>
             </div>
           </div>
         </div>
-
-
-          </div>
-        </div>
-
       </div>
-
-
-
-
-
     </div>
-
   </body>
 </html>
