--- a/index.html
+++ b/index.html
@@ -61,8 +61,6 @@
               <input type="checkbox" name="topping" value="8">Green Peppers<br>
               <input type="checkbox" name="topping" value="9">Mushrooms<br>
               <input type="checkbox" name="topping" value="10">Pineapple<br>
-              <input type="checkbox" name="topping" value="11">Olives<br>
-              <input type="checkbox" name="topping" value="12">Jalapenos<br>
               <br>
               <button class="btn-danger btn" type="submit" name="button" id="topSubmit">Submit</button>
               </form>
@@ -77,10 +75,10 @@
                 <div class="form-group">
                   <label for="time">Select a size</label>
                   <select class="form-control" id="size2">
-                    <option value="1">Small (Serves 2 people or 1 hungry person)</option>
-                    <option value="2">Medium (Serves 3 people or 2 hungry people or 1 quite hungry person)</option>
-                    <option value="3">Large (Serves 4 people or 3 hungry people or 1 very hungry person)</option>
-                    <option value="4">Extra-Large (Serves 5 people or 4 hungry people or 1 literally starving person)</option>
+                    <option value="1">Small</option>
+                    <option value="2">Medium</option>
+                    <option value="3">Large</option>
+                    <option value="4">Extra-Large</option>
                   </select>
                 </div>
                 <button class="btn-danger btn" type="submit" name="button">Add to order!</button>
@@ -92,7 +90,7 @@
             </div>
           </div>
           <div class="delivery stagedReveal framed">
-            <h3>What is your delivery address?</h3>
+            <h3>Pease enter your address</h3>
             <form id="new-address">
               <div class="form-group">
                 <label for="Name">First name</label>
@@ -127,7 +125,7 @@
           </ol>
           <div class="row">
             <div class="col-xs-10 col-xs-offset-1" id="totalDiv">
-              <p>$<span class="framed" id="totalHere"></span></p>
+              <p>Ksh.<span class="framed" id="totalHere"></span></p>
             </div>
           </div>
         </div>
@@ -136,10 +134,10 @@
             <h3>Thank you <span id="nameHere"></span>!</h3>
             <div class="row">
               <div class="col-xs-7 addressText">
-                <h3>Your Final order total is: $<span id="finalTotalHere"></span></h3>
-                <h3>We will deliver to this address:</h3>
+                <h3>Your Final order total is: Ksh.<span id="finalTotalHere"></span></h3>
+                <h3>Thank you,the orderr will be delivere to this address:</h3>
                 <h4><span id="streetHere"></span></h4>
-                <h4><span id="cityHere"></span>, <span id="stateHere"> <span id="zipHere"></span></span></h4>
+                <h4><span id="cityHere"></span>, <span id="stateHere"></span></h4>
               </div>
             </div>
           </div>
