--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="row1">
           <div class="col-xs-12 welcome">
             <hr>
-            <p>Here at Pizza Planet we believe in maintaining Stellar quality for <span class="emphasis">every single</span> order.</p>
+            <p><span id="para">This is Pizaa Ribaa,we believe in Quality service!</span></p>
             <div class="row">
               <div class="col-xs-5 pizza1">
                 <form id="pizza1">
@@ -31,7 +31,7 @@
                       <option value="4">Extra-Large</option>
                     </select>
                   </div>
-                  <button class="btn-danger btn" type="submit" name="button">Add some toppings!</button>
+                  <button class="btn-danger btn" type="submit" name="button">Add toppings!</button>
                 </form>
               </div>
             </div>
@@ -42,20 +42,19 @@
         <div class="col-xs-7 col-xs-offset-1">
           <div class="row topsAdd stagedReveal framed">
             <div class="col-xs-5">
-              <h3 class="heading">Pick your toppings:</h3>
+              <h3 class="heading">Select the toppings:</h3>
               <form action="form_action.asp" class="toppings">
               <input type="checkbox" name="topping" value="1" id="cheese">Cheese<br>
               <input type="checkbox" name="topping" value="2">Pepperoni<br>
               <input type="checkbox" name="topping" value="3">Sausage<br>
-              <input type="checkbox" name="topping" value="4">Canadian Bacon<br>
-              <input type="checkbox" name="topping" value="5">Steak<br>
-              <input type="checkbox" name="topping" value="6">Tofu<br>
+              <input type="checkbox" name="topping" value="4">Bacon<br>
+
               </form>
             </div>
             <div class="col-xs-5">
               <br>
-              <br>
-              <br>
+              <h4>Other topings</h4>
+
               <form action="form_action.asp" class="toppings">
               <input type="checkbox" name="topping" value="7">Onions<br>
               <input type="checkbox" name="topping" value="8">Green Peppers<br>
@@ -86,11 +85,11 @@
               <br>
               <h4>Or, are you ready to go?</h4>
               <br>
-              <button class="btn-danger btn btn-large" type="button" name="button" id="goToDelivery">I'm ready to submit this order</button>
+              <button class="btn-danger btn btn-large" type="button" name="button" id="goToDelivery">Ready to submit order</button>
             </div>
           </div>
           <div class="delivery stagedReveal framed">
-            <h3>Pease enter your address</h3>
+            <h3>Please enter your address</h3>
             <form id="new-address">
               <div class="form-group">
                 <label for="Name">First name</label>
