--- a/index.html
+++ b/index.html
@@ -12,10 +12,23 @@
       <div class="jumbotron">
         <div class="header">
           <img src="images/pizza2.png" width="300px" height="200px" alt="" id="logo"/>
-          <h2 class="heading">Welcome to Pizaa-Ribaa!</h2>
+          <h1 class="heading">Welcome to Pizaa-Ribaa!</h1>
+
         </div>
         </div>
         <div class="row1">
+          <div class="col-md-4">
+            <img src="images/pizzatwo.jpg" width="300px" height="200px" alt="">
+
+          </div>
+          <div class="col-md-4">
+            <img src="images/pizzahat.jpg" width="300px" height="200px" alt="">
+
+          </div>
+          <div class="col-md-4">
+            <img src="images/pizzavar.jpg" width="300px" height="200px" alt="">
+
+          </div>
           <div class="col-xs-12 welcome">
             <hr>
             <p><span id="para">This is Pizaa Ribaa,we believe in Quality service!</span></p>
@@ -88,6 +101,7 @@
               <button class="btn-danger btn btn-large" type="button" name="button" id="goToDelivery">Ready to submit order</button>
             </div>
           </div>
+
           <div class="delivery stagedReveal framed">
             <h3>Please enter your address</h3>
             <form id="new-address">
