--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         </div>
         </div>
-      
+
         <div class="row1">
 
           <div class="col-xs-12 welcome">
@@ -72,7 +72,7 @@
             <div class="col-xs-9 ">
               <img src="https://www.reginospizza.com/images/site/veg.png" width="400px" height="300px" alt="Confirmation Picture" class="img-responsive" />
               <h1>Thank you for your order!</h1>
-              <p>Hang on, I need another pizza!</p>
+              <p>Need another Pizza?</p>
               <form id="pizza2">
                 <div class="form-group">
                   <label for="time">Select a size</label>
