add changes in index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,22 @@
         </div>
 
         <div class="row1">
+          <div class="row2">
+            <div class="col-md-4">
+              <img src="images/pizzatwo.jpg"  width="400px" height="300px" alt="">
 
+            </div>
+            <div class="col-md-4">
+              <img src="images/pizzatwo.jpg"   width="400px" height="300px" alt="">
+
+            </div>
+            <div class="col-md-4">
+              <img src="images/pizzavar.jpg"   width="400px" height="300px" alt="">
+
+            </div>
+
+
+          </div>
           <div class="col-xs-12 welcome">
             <hr>
             <p><span id="para">This is Pizaa Ribaa,we believe in Quality service!</span></p>
