--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="col-xs-5">
               <h3 class="heading">Select the toppings:</h3>
               <form action="form_action.asp" class="toppings">
-              <input type="checkbox" name="topping" value="1" id="cheese">Cheese<br>
+              <input type="checkbox" name="topping" value="1">Cheese<br>
               <input type="checkbox" name="topping" value="2">Pepperoni<br>
               <input type="checkbox" name="topping" value="3">Sausage<br>
               <input type="checkbox" name="topping" value="4">Bacon<br>
